# TreasuryLens

./: .env.example  .gitignore  LICENSE  README.md
backend/: pyproject.toml
backend/agent/: ask_agent.py  extra_lenses.py  prompts.py  recon_loader.py  schema_context.py  synthesis.py  treasury_agent.py
backend/app/: __init__.py  main.py  settings.py
backend/craft/: craft_client.py  rate_limiter.py
backend/models/: ask.py  report.py
docs/: fetch_craft_creds.md  live_report_cache.json  schema_notes.md  schema_recon.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: ChatPanel.tsx  LensTabs.tsx  PlotlyChart.tsx  RiskBadge.tsx  RiskCard.tsx  SqlAccordion.tsx  Summary.tsx
scripts/: fetch_craft_creds.py  schema_recon.py  smoke_nebius.py
