[project]
name = "treasurylens"
version = "0.1.0"
description = "Corporate Crypto Treasury Risk Dashboard for Emergence/Nebius CRAFT hackathon"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "python-dotenv>=1.0.1",
  "openai>=1.55.0",
  "httpx>=0.27.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agent*", "craft*", "models*"]
